--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "next": "10.0.9",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "4.0.3",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "2.0.4"
   },
   "scripts": {
@@ -45,6 +44,8 @@
   },
   "devDependencies": {
     "autoprefixer": "10.2.5",
-    "postcss": "8.2.8"
+    "react-scripts": "^5.0.1",
+    "webpack": "^5.91.0",
+    "webpack-dev-middleware": "^7.2.1"
   }
 }
